[package]
name = "database"
version = "0.1.0"
authors = ["Adam Casey <acasey23@bloomberg.net>", "James Peach <james_peach01@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3.1" }